--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- FIM HEADER -->
 
     <h2 class="text-2x1 md:text-3x1 font-bold text-center mt-9 mb-6">
-      Conheça nosso Cardápio
+      Conheça nosso Menu
     </h2>
 
     <!-- INÍCIO MENU -->
@@ -220,7 +220,7 @@
       <!-- GRID BEBIDAS -->
       <div
         class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7x1 px-2 mb-16"
-        id="Cardápio"
+        id="menu"
       >
         <!-- BEBIDA ITEM -->
         <div class="flex gap-2 w-full">
@@ -277,7 +277,9 @@
     <!-- Fim MENU -->
 
 <!-- MODAL CART -->
-<div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden">
+<div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden"
+id="cart-modal"
+>
 
     <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
         <h2 class="text-center font-bold text-2x1 mb-2">Meu Carrinho</h2>
@@ -312,11 +314,13 @@ class="w-full border-2 p-1 rounded my-1"
         id="cart-btn"
 >
 (<span id="cart-count">0</span>)
-Veja meu Carrinho
+Ver meu Carrinho
 <i class="fa fa-cart-plus text-lg text-white"></i>
 </button>
     </footer>
         <!-- FIM BUTTON CART FOOTER -->
+
+<script src="script.js"></script>
 
   </body>
 </html>
