--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- META TAG OG -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dev Burguer - O melhor hamburguer dev!" />
+    <meta property="og:image" content="https://cardapio-beryl.vercel.app/assets/hamb-1.png" />
+    <meta property="og:description" content="O melhor hamburguer da região!" />
+    <meta property="og:site_name" content="DevBurguer" />
+
+
+
     <link rel="stylesheet" href="./styles/output.css" />
 
     <title>Dev Burguer - A melhor hamburgueria dev!</title>
