Adicionando meta tag og

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- META TAG OG -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Dev Burguer - O melhor hamburguer dev!" />
-    <meta property="og:image" content="https://cardapio-wine.vercel.app/assets/hamb-1.png" />
+    <meta property="og:image" content="https://cardapio-beryl.vercel.app/assets/hamb-1.png" />
     <meta property="og:description" content="O melhor hamburguer da região!" />
     <meta property="og:site_name" content="DevBurguer" />
 
